@@ -5,6 +5,8 @@
 	ignorted in VC-Dired listings, heading off lots of expensive calls
 	to (vc-state).
 
+	* vc.el (vc-dired-hook): Refactoring step.  
+
 2007-12-27  Vinicius Jose Latorre  <viniciusjl@ig.com.br>
 
 	* ps-print.el (ps-mark-active-p): Fun returned back.
@@ -18,12 +20,12 @@
 	with 'e' in a log-view buffer.  Not documented yet as this
 	only works for SCCS, RCS, and maybe CVS if you have admin
 	privileges.  When we have backend support for Subversion and
-	more modern systems it will ve time to write this up.
+	more modern systems it will be time to write this up.
 
 2007-12-27  Kenichi Handa  <handa@ni.aist.go.jp>
 
 	* international/mule-cmds.el (select-safe-coding-system): When a
-	buffer is modfied, cancel the writing.
+	buffer is modified, cancel the writing.
 
 2007-12-26  Eric S. Raymond  <esr@snark.thyrsus.com>
 
